feat: step3 다이얼로그 개발 S12P21D101-186

--- a/frontend/Kkomdae/app/src/main/res/layout/fragment_laptop_info_input.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/fragment_laptop_info_input.xml
@@ -583,6 +583,7 @@
     </ScrollView>
 
     <Button
+        android:id="@+id/btn_confirm"
         android:layout_width="0dp"
         android:layout_height="51dp"
         app:layout_constraintStart_toStartOf="parent"
