--- a/frontend/Kkomdae/app/src/main/res/layout/layout_dialog_step3_intro.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/layout_dialog_step3_intro.xml
@@ -18,7 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
-            android:text="STEP 1"
+            android:text="STEP 3"
             android:textColor="@color/gray700"
             style="@style/Display1"
             app:layout_constraintEnd_toEndOf="parent"
@@ -31,7 +31,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
             android:gravity="center"
-            android:text="이제 촬영을 시작해 볼까요?"
+            android:text="등록을 마무리할 시간이에요!"
             android:textColor="@color/gray300"
             style="@style/Body2"
             android:lineSpacingExtra="4dp"
@@ -41,13 +41,11 @@
 
         <TextView
             android:id="@+id/tv_description2"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
             android:layout_marginTop="4dp"
-            android:layout_marginEnd="24dp"
             android:gravity="center"
-            android:text="가이드라인에 맞춰 노트북을 촬영해주세요!"
+            android:text="노트북 정보와 수령한 물품을 모두 기록해주세요."
             android:textColor="@color/gray300"
             style="@style/Body2"
             android:lineSpacingExtra="4dp"
@@ -59,9 +57,9 @@
             android:id="@+id/iv_character"
             android:layout_width="180dp"
             android:layout_height="180dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="16dp"
             android:contentDescription="step1 꼬미"
-            android:src="@drawable/ic_step1_kkomi"
+            android:src="@drawable/ic_step3_kkomi"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_description2" />
@@ -71,7 +69,7 @@
             android:layout_width="0dp"
             android:layout_height="52dp"
             android:layout_marginStart="32dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="20dp"
             android:layout_marginEnd="32dp"
             android:background="@drawable/bg_button_intro"
             android:text="확인"
