feat: 노트북 정보 입력 화면 연결
- 데이트피커, dropdown, 빈칸 있을시 완료버튼 비활성화

S12P21D101-140 #done 기능 추가 완료

--- a/frontend/Kkomdae/app/src/main/res/values/themes.xml
+++ b/frontend/Kkomdae/app/src/main/res/values/themes.xml
@@ -2,7 +2,8 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.Kkomdae" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+         <item name="colorPrimary">@color/blue500</item>
+
         <item name="android:windowBackground">#FCFCFC</item>
         <item name="android:statusBarColor">#FCFCFC</item> <!-- ✅ 상태바 흰색 -->
         <item name="android:windowLightStatusBar">true</item>
