--- a/backend/kkomdae/src/main/resources/templates/index-ss.html
+++ b/backend/kkomdae/src/main/resources/templates/index-ss.html
@@ -71,7 +71,7 @@
                 </div>
                 <div class="d-grid">
                     <button type="submit" class="btn btn-primary btn-lg">확인</button>
-                    <a href="https://project.ssafy.com/oauth/sso-check?client_id=811342aa-58e7-4430-9b48-18ef1108d783&response_type=code&redirect_uri=http://localhost:8080/callback" class="btn btn-secondary btn-lg mt-2">싸피로그인</a>
+                    <a href="https://project.ssafy.com/oauth/sso-check?client_id=811342aa-58e7-4430-9b48-18ef1108d783&response_type=code&redirect_uri=http://localhost:8080/api/sso/login" class="btn btn-secondary btn-lg mt-2">싸피로그인</a>
                 </div>
             </form>
         </div>
