--- a/frontend/Kkomdae/app/src/main/res/layout/item_submission.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/item_submission.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_marginTop="14dp"
+    android:layout_marginVertical="7dp"
     android:background="@drawable/submission_border_rounded"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
