feat : 기기등록 가이드 온보딩 화면 개발 S12P21D101-188

--- a/frontend/Kkomdae/app/src/main/res/layout/layout_top_bar.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/layout_top_bar.xml
@@ -23,6 +23,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        style="@style/Headline1"/>
+        android:textSize="18dp"
+        android:fontFamily="@font/pretendard_semi_bold"
+        android:lineSpacingMultiplier="1.4"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
