--- a/frontend/Kkomdae/app/src/main/res/layout/activity_login.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/activity_login.xml
@@ -108,10 +108,23 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-
-    <WebView
-    android:visibility="gone"
-        android:id="@+id/wv_login"
+    <View
+        android:id="@+id/v_login"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:background="@color/white"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+    <WebView
+        android:id="@+id/wv_login"
+        android:layout_width="400dp"
+        android:layout_height="400dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
