--- a/frontend/Kkomdae/app/src/main/res/layout/activity_login.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/activity_login.xml
@@ -120,8 +120,8 @@
         app:layout_constraintTop_toTopOf="parent" />
     <WebView
         android:id="@+id/wv_login"
-        android:layout_width="400dp"
-        android:layout_height="400dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
