--- a/frontend/Kkomdae/app/src/main/res/drawable/border_gray_rounded.xml
+++ b/frontend/Kkomdae/app/src/main/res/drawable/border_gray_rounded.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <corners android:radius="10dp"/> <!-- 둥근 모서리 설정 -->
-    <solid android:color="#E9EAED"/> <!-- 회색 배경 -->
+    <corners android:radius="10dp"/>
+    <solid android:color="#E9EAED"/>
 </shape>
