--- a/frontend/Kkomdae/app/src/main/res/drawable/submission_border_rounded.xml
+++ b/frontend/Kkomdae/app/src/main/res/drawable/submission_border_rounded.xml
@@ -2,12 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <!-- 테두리 설정 -->
     <stroke
         android:width="1dp"
-        android:color="#D9D9D9"/>  <!-- 테두리 색 (파란색 예제) -->
+        android:color="@color/gray100"/>
 
-    <!-- 모서리 둥글게 설정 -->
     <corners android:radius="25dp"/>
 
 </shape>
