--- a/frontend/Kkomdae/app/src/main/res/layout/activity_splash.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/activity_splash.xml
@@ -53,9 +53,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="꼼꼼하게 대신 점검해드립니다."
-            style="@style/Title3"
-            android:textColor="@color/gray400"
+            android:text="꼼꼼하게 대신 점검해드립니다"
+            style="@style/Body1"
+            android:textColor="@color/gray300"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/cl_logo_title_container" />
