--- a/frontend/Kkomdae/app/src/main/res/layout/item_submission.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/item_submission.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_marginVertical="7dp"
+    android:layout_marginVertical="10dp"
     android:background="@drawable/submission_border_rounded"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
@@ -18,12 +18,13 @@
         app:layout_constraintBottom_toTopOf="@id/cl_menu"
         android:layout_marginBottom="24dp"
         android:src="@drawable/ic_laptap_small"/>
+
     <TextView
         android:id="@+id/tv_model_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="NT761XDA-X07/C(11세대)"
-        style="@style/Title1"
+        style="@style/Title4"
         app:layout_constraintBottom_toBottomOf="@id/iv_icon"
         app:layout_constraintTop_toTopOf="@id/iv_icon"
         android:layout_marginStart="16dp"
@@ -34,15 +35,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="대여중"
-        style="@style/Label3"
-        android:padding="4dp"
+        style="@style/Label4"
+        android:paddingTop="2dp"
+        android:paddingBottom="2dp"
+        android:paddingStart="4dp"
+        android:paddingEnd="4dp"
         android:textColor="@color/blue300"
         android:background="@drawable/status_border_rounded"
         app:layout_constraintStart_toEndOf="@id/tv_model_number"
         app:layout_constraintTop_toTopOf="@id/tv_model_number"
         app:layout_constraintBottom_toBottomOf="@id/tv_model_number"
        app:layout_constraintEnd_toStartOf="@id/btn_down"/>
-
 
     <ImageView
         android:id="@+id/btn_down"
@@ -54,6 +57,7 @@
         app:layout_constraintTop_toTopOf="@id/iv_icon"
         app:layout_constraintBottom_toBottomOf="@id/iv_icon"
         app:layout_constraintEnd_toEndOf="parent"/>
+
     <ImageView
         android:id="@+id/btn_up"
         android:visibility="gone"
@@ -94,7 +98,6 @@
         android:text="대여 : "
         app:layout_constraintTop_toTopOf="@id/line"
         app:layout_constraintBottom_toBottomOf="parent"
-
         style="@style/Label4"
         android:textColor="@color/gray400"
         app:layout_constraintStart_toStartOf="parent"
@@ -103,6 +106,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/gray400"
         android:text="25/01/03"
         style="@style/Label4"
         app:layout_constraintTop_toTopOf="@id/tv_date"
@@ -112,9 +116,12 @@
 
     <TextView
         android:id="@+id/bt_file_download"
-       style="@style/Label1"
+        style="@style/Label3"
         android:textColor="#3391FF"
-        android:padding="12dp"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
         android:background="@drawable/border_gray_rounded"
         android:backgroundTint="@color/blue100"
         android:layout_width="wrap_content"
@@ -136,8 +143,11 @@
         android:backgroundTint="#FBE6E2"
         android:text="반납하기"
         android:textColor="#E4614F"
-        android:padding="12dp"
-        style="@style/Label1"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        style="@style/Label3"
         android:gravity="center"
         android:layout_marginEnd="28dp"
         app:layout_constraintEnd_toEndOf="parent"
