feat: Step2 QR촬영 구현
- Ml Kit를 사용해서 qr인식하고 결과화면으로 데이터 전송

S12P21D101-198 #done 기능 추가 완료

--- a/frontend/Kkomdae/app/src/main/res/layout/fragment_qr_scan.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/fragment_qr_scan.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.QrScanFragment">
+    tools:context=".ui.step2.QrScanFragment">
 
     <!-- 📸 카메라 미리보기 뷰 -->
     <androidx.camera.view.PreviewView
