--- a/frontend/Kkomdae/app/src/main/res/layout/layout_logout_dialog.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/layout_logout_dialog.xml
@@ -8,13 +8,13 @@
     android:paddingEnd="25dp"
     android:paddingTop="35dp"
     android:paddingBottom="35dp"
-    android:background="@drawable/next_step_dialog_background">
+    android:background="@drawable/bg_dialog">
 
     <TextView
         android:id="@+id/tv_dialog_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="1단계를 완료 하시겠습니까?"
+        android:text="정말로 로그아웃 하시겠습니까?"
         style="@style/Display3"
         android:textColor="@color/gray700"
         android:textAlignment="center"
@@ -22,25 +22,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <TextView
-        android:id="@+id/tv_dialog_description"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="완료 후에는 AI 분석이 시작됩니다."
-        style="@style/Body2"
-        android:textColor="@color/gray700"
-        android:textAlignment="center"
-        app:layout_constraintTop_toBottomOf="@id/tv_dialog_title"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_marginTop="32dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_dialog_description"
+        app:layout_constraintTop_toBottomOf="@id/tv_dialog_title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
@@ -48,30 +34,33 @@
             android:id="@+id/btn_cancel"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.8"
-            android:layout_marginEnd="15dp"
             android:text="취소"
             android:paddingVertical="16dp"
             android:textAlignment="center"
             style="@style/Title1"
             android:textColor="@color/white"
-            android:background="@drawable/bg_button_cancel" />
-
-        <Space
-            android:layout_width="10dp"
-            android:layout_height="match_parent" />
+            android:background="@drawable/bg_button_cancel"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/btn_confirm"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth_percent="0.45"
+            android:layout_marginEnd="8dp" />
 
         <TextView
-            android:id="@+id/btn_next"
+            android:id="@+id/btn_confirm"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1.3"
             android:paddingVertical="16dp"
-            android:text="완료 후 다음 단계"
+            android:text="확인"
             style="@style/Title1"
             android:textColor="@color/white"
             android:textAlignment="center"
-            android:background="@drawable/bg_button_next" />
-    </LinearLayout>
+            android:background="@drawable/bg_button_confirm"
+            app:layout_constraintStart_toEndOf="@id/btn_cancel"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth_percent="0.45"
+            android:layout_marginStart="8dp" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
