--- a/frontend/Kkomdae/app/src/main/res/layout/layout_logout_dialog.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/layout_logout_dialog.xml
@@ -4,10 +4,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingStart="25dp"
-    android:paddingEnd="25dp"
-    android:paddingTop="35dp"
-    android:paddingBottom="35dp"
+    android:paddingStart="40dp"
+    android:paddingEnd="40dp"
+    android:paddingTop="25dp"
+    android:paddingBottom="25dp"
+    android:layout_margin="20dp"
     android:background="@drawable/bg_dialog">
 
     <TextView
@@ -15,9 +16,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="정말로 로그아웃 하시겠습니까?"
-        style="@style/Display3"
+        style="@style/Title1"
         android:textColor="@color/gray700"
         android:textAlignment="center"
+        android:layout_marginTop="10dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -25,9 +27,10 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="40dp"
         app:layout_constraintTop_toBottomOf="@id/tv_dialog_title"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
         <TextView
@@ -35,31 +38,31 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="취소"
-            android:paddingVertical="16dp"
+            android:paddingVertical="12dp"
             android:textAlignment="center"
-            style="@style/Title1"
+            style="@style/Title3"
             android:textColor="@color/white"
             android:background="@drawable/bg_button_cancel"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@id/btn_confirm"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintWidth_percent="0.45"
+            app:layout_constraintHorizontal_weight="1"
             android:layout_marginEnd="8dp" />
 
         <TextView
             android:id="@+id/btn_confirm"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:paddingVertical="16dp"
+            android:paddingVertical="12dp"
             android:text="확인"
-            style="@style/Title1"
+            style="@style/Title3"
             android:textColor="@color/white"
             android:textAlignment="center"
             android:background="@drawable/bg_button_confirm"
             app:layout_constraintStart_toEndOf="@id/btn_cancel"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintWidth_percent="0.45"
+            app:layout_constraintHorizontal_weight="1"
             android:layout_marginStart="8dp" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
