--- a/frontend/Kkomdae/app/src/main/res/layout-land/fragment_font_shot_guide.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout-land/fragment_font_shot_guide.xml
@@ -184,7 +184,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
             android:textColor="@color/white"
-            android:text="반사광이 없도록 조절하세요"
+            android:text="밝은 조명 아래에서 촬영하세요"
             app:layout_constraintTop_toTopOf="@id/iv_image2"
             app:layout_constraintStart_toEndOf="@id/iv_image2"
             app:layout_constraintBottom_toBottomOf="@id/iv_image2"
@@ -212,7 +212,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="그림자가 생기지 않도록 주의하세요"
+            android:text="반사광이 없도록 조절하세요"
             android:textColor="@color/white"
             android:layout_marginStart="12dp"
             app:layout_constraintTop_toTopOf="@id/iv_image3"
@@ -221,6 +221,36 @@
             app:layout_constraintEnd_toEndOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cl_text4"
+            android:layout_width="wrap_content"
+            app:layout_constraintStart_toStartOf="@id/cl_text1"
+            app:layout_constraintTop_toBottomOf="@id/cl_text3"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:id="@+id/iv_image4"
+                android:layout_width="17dp"
+                android:layout_height="12dp"
+                android:src="@drawable/ic_success"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:tint="#14AE5C"
+                android:layout_marginTop="18dp"
+                />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="그림자가 생기지 않도록 주의하세요"
+                android:textColor="@color/white"
+                android:layout_marginStart="12dp"
+                app:layout_constraintTop_toTopOf="@id/iv_image4"
+                app:layout_constraintStart_toEndOf="@id/iv_image4"
+                app:layout_constraintBottom_toBottomOf="@id/iv_image4"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 
 
@@ -228,12 +258,12 @@
         android:id="@+id/tv_text4"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="💡 Tip!  옆에서 수평으로 촬영하세요!"
+        android:text="💡 Tip!  평평한 곳에 놓고 위에서 촬영하세요!"
         app:layout_constraintBottom_toTopOf="@id/btn_cancel"
         style="@style/Caption1"
         android:paddingVertical="8dp"
 
-        app:layout_constraintTop_toBottomOf="@id/cl_text3"
+        app:layout_constraintTop_toBottomOf="@id/cl_text4"
         app:layout_constraintStart_toStartOf="@id/cl_text3"
         android:background="@drawable/border_gray_rounded"
         app:layout_constraintEnd_toEndOf="parent"
