--- a/frontend/Kkomdae/app/src/main/res/layout-land/fragment_screen_shot_guide.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout-land/fragment_screen_shot_guide.xml
@@ -9,8 +9,10 @@
     <!-- 📸 카메라 미리보기 뷰 -->
     <androidx.camera.view.PreviewView
         android:id="@+id/previewView"
-
-        android:layout_width="match_parent"
+        app:layout_constraintDimensionRatio="4:3"
+        android:layout_width="0dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:layout_height="match_parent" />
 
     <!-- 📌 오버레이: 네모 틀과 반투명 검은색 배경 -->
@@ -144,7 +146,6 @@
             />
 
         <TextView
-            style="@style/Body1"
             android:layout_marginStart="12dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -179,7 +180,6 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
             android:textColor="@color/white"
-            style="@style/Body1"
             android:text="화면이 켜진 상태로 촬영하세요 (밝은 배경 권장)"
             app:layout_constraintTop_toTopOf="@id/iv_image2"
             app:layout_constraintStart_toEndOf="@id/iv_image2"
@@ -209,7 +209,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="화면의 모든 가장자리가 보이도록 촬영하세요"
-            style="@style/Body1"
             android:textColor="@color/white"
             android:layout_marginStart="12dp"
             app:layout_constraintTop_toTopOf="@id/iv_image3"
@@ -219,6 +218,35 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cl_text4"
+            android:layout_width="wrap_content"
+            app:layout_constraintStart_toStartOf="@id/cl_text1"
+            app:layout_constraintTop_toBottomOf="@id/cl_text3"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:id="@+id/iv_image4"
+                android:layout_width="17dp"
+                android:layout_height="12dp"
+                android:src="@drawable/ic_success"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:tint="#14AE5C"
+                android:layout_marginTop="18dp"
+                />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="반사광이 없도록 각도를 조절하세요"
+                android:textColor="@color/white"
+                android:layout_marginStart="12dp"
+                app:layout_constraintTop_toTopOf="@id/iv_image4"
+                app:layout_constraintStart_toEndOf="@id/iv_image4"
+                app:layout_constraintBottom_toBottomOf="@id/iv_image4"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
     <TextView
@@ -230,7 +258,7 @@
         style="@style/Caption1"
         android:paddingVertical="8dp"
 
-        app:layout_constraintTop_toBottomOf="@id/cl_text3"
+        app:layout_constraintTop_toBottomOf="@id/cl_text4"
         app:layout_constraintStart_toStartOf="@id/cl_text3"
         android:background="@drawable/border_gray_rounded"
         app:layout_constraintEnd_toEndOf="parent"
