--- a/frontend/Kkomdae/app/src/main/res/layout/fragment_right_guide.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/fragment_right_guide.xml
@@ -8,8 +8,11 @@
 
     <!-- 📸 카메라 미리보기 뷰 -->
     <androidx.camera.view.PreviewView
+        app:layout_constraintDimensionRatio="4:3"
         android:id="@+id/previewView"
-        android:layout_width="match_parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="0dp"
         android:layout_height="match_parent" />
 
 
@@ -210,7 +213,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="모든 연결부가 선명하게 보이도록 촬영하세요"
+            android:text="반사광이 없도록 조절하세요"
             android:textColor="@color/white"
             android:layout_marginStart="12dp"
             app:layout_constraintTop_toTopOf="@id/iv_image3"
@@ -219,6 +222,36 @@
             app:layout_constraintEnd_toEndOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cl_text4"
+            android:layout_width="wrap_content"
+            app:layout_constraintStart_toStartOf="@id/cl_text1"
+            app:layout_constraintTop_toBottomOf="@id/cl_text3"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:id="@+id/iv_image4"
+                android:layout_width="17dp"
+                android:layout_height="12dp"
+                android:src="@drawable/ic_success"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:tint="#14AE5C"
+                android:layout_marginTop="18dp"
+                />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="모든 연결부가 선명하게 보이도록 촬영하세요"
+                android:textColor="@color/white"
+                android:layout_marginStart="12dp"
+                app:layout_constraintTop_toTopOf="@id/iv_image4"
+                app:layout_constraintStart_toEndOf="@id/iv_image4"
+                app:layout_constraintBottom_toBottomOf="@id/iv_image4"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 
@@ -231,7 +264,7 @@
         style="@style/Caption1"
         android:paddingVertical="8dp"
 
-        app:layout_constraintTop_toBottomOf="@id/cl_text3"
+        app:layout_constraintTop_toBottomOf="@id/cl_text4"
         app:layout_constraintStart_toStartOf="@id/cl_text3"
         android:background="@drawable/border_gray_rounded"
         app:layout_constraintEnd_toEndOf="parent"
