design : main 텍스트 크기 조정 S12P21D101-193

--- a/frontend/Kkomdae/app/src/main/res/layout/fragment_main.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/fragment_main.xml
@@ -79,7 +79,8 @@
                     android:layout_height="wrap_content"
                     android:text="보이지 않는 흠집까지,"
                     android:layout_marginBottom="4dp"
-                    style="@style/Headline2"
+                    style="@style/Display3"
+                    android:textColor="@color/gray700"
                     app:layout_constraintBottom_toTopOf="@+id/tv_sub_message_part2"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
