feat: Step1 촬영 임시저장 구현
- 단계별 저장하고 해당 단계로 이동

S12P21D101-200 #done 작업 완료

--- a/frontend/Kkomdae/app/src/main/res/layout/fragment_step1_guide.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/fragment_step1_guide.xml
@@ -23,6 +23,7 @@
         app:layout_constraintTop_toBottomOf="@id/top_bar"
         android:layout_height="wrap_content">
     <include
+        android:id="@+id/layout_step"
         layout="@layout/layout_step_guide"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
