--- a/frontend/Kkomdae/app/src/main/res/layout/fragment_oath.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/fragment_oath.xml
@@ -15,12 +15,13 @@
         app:layout_constraintEnd_toEndOf="parent"/>
 
     <ScrollView
+        android:id="@+id/scrollView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/top_bar"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintBottom_toTopOf="@id/btn_next">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -501,21 +502,21 @@
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
-            <Button
-                android:id="@+id/btn_next"
-                android:layout_width="0dp"
-                android:layout_height="56dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/cardAgreement4"
-                android:layout_marginTop="24dp"
-                android:text="위 내용을 모두 동의합니다."
-                android:backgroundTint="@color/blue200"
-                style="@style/Title1"/>
-
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
     </ScrollView>
+
+    <Button
+        android:id="@+id/btn_next"
+        android:layout_width="0dp"
+        android:layout_height="56dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_margin="24dp"
+        android:text="위 내용을 모두 동의합니다."
+        android:backgroundTint="@color/blue200"
+        style="@style/Title1"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
