--- a/frontend/Kkomdae/app/src/main/res/drawable/ic_cancel.xml
+++ b/frontend/Kkomdae/app/src/main/res/drawable/ic_cancel.xml
@@ -5,10 +5,9 @@
     android:viewportHeight="22">
   <path
       android:pathData="M1,21L11,11L21,21M21,1L10.998,11L1,1"
-      android:strokeAlpha="0.5"
       android:strokeLineJoin="round"
-      android:strokeWidth="1.5"
+      android:strokeWidth="2.5"
       android:fillColor="#00000000"
-      android:strokeColor="#ffffff"
+      android:strokeColor="@color/gray800"
       android:strokeLineCap="round"/>
 </vector>
