--- a/frontend/Kkomdae/app/src/main/res/layout/layout_top_bar.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/layout_top_bar.xml
@@ -24,6 +24,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:textSize="18dp"
+        android:textColor="@color/gray800"
         android:fontFamily="@font/pretendard_semi_bold"
         android:lineSpacingMultiplier="1.4"/>
 
